[gd_scene load_steps=96 format=3 uid="uid://bxakpravolhjm"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_fluy6"]
[ext_resource type="Texture2D" uid="uid://b8ljv27msbdvb" path="res://Enemy/Death.png" id="2_ctcad"]
[ext_resource type="Texture2D" uid="uid://c6ap3xfxcrlh0" path="res://Enemy/Hurt(no_sword).png" id="3_kb0vp"]
[ext_resource type="Texture2D" uid="uid://bqexke6lny5au" path="res://Enemy/Idle.png" id="3_q1w4j"]
[ext_resource type="Texture2D" uid="uid://dxch38oq7l4l" path="res://Enemy/enemy_hit_stun.png" id="4_6vgw4"]
[ext_resource type="Texture2D" uid="uid://dk2hnyuy20aqf" path="res://Enemy/Attacks.png" id="4_wtlej"]
[ext_resource type="Texture2D" uid="uid://dlpfstjr5ryqa" path="res://Enemy/Run.png" id="6_1ivto"]
[ext_resource type="Texture2D" uid="uid://b52wakahgw8q1" path="res://GUI/ProgressBar_05/BarV5_Bar.png" id="8_a53vn"]
[ext_resource type="Texture2D" uid="uid://dqum0tvp8yupk" path="res://GUI/ProgressBar_05/BarV5_ProgressBar.png" id="9_5ex2f"]
[ext_resource type="AudioStream" uid="uid://c3wp0s44u3sph" path="res://Audio/SFX/Enemy/enemy_melee_with_grunt.mp3" id="10_37vdk"]
[ext_resource type="AudioStream" uid="uid://bs70xupdhhnig" path="res://Audio/SFX/Enemy/enemy_death.mp3" id="11_xy00l"]
[ext_resource type="AudioStream" uid="uid://vbrca1886hjs" path="res://Audio/SFX/turret_laser_ceiling_hit.tres" id="12_c4j2h"]
[ext_resource type="Script" path="res://addons/godot_sfxr/SfxrStreamPlayer2D.gd" id="13_jplx3"]
[ext_resource type="AudioStream" uid="uid://dbqnoycn7tinc" path="res://Audio/SFX/Enemy/enemy_hit.mp3" id="14_4bolf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s2eqv"]
radius = 8.0
height = 46.4

[sub_resource type="AtlasTexture" id="AtlasTexture_oegmo"]
atlas = ExtResource("2_ctcad")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pmfx"]
atlas = ExtResource("2_ctcad")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x3wn"]
atlas = ExtResource("2_ctcad")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlumu"]
atlas = ExtResource("2_ctcad")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4ix4"]
atlas = ExtResource("3_kb0vp")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qqyi"]
atlas = ExtResource("3_kb0vp")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yv6h"]
atlas = ExtResource("3_kb0vp")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo8xp"]
atlas = ExtResource("4_6vgw4")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4uyc"]
atlas = ExtResource("4_6vgw4")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij7oy"]
atlas = ExtResource("4_6vgw4")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uymky"]
atlas = ExtResource("4_6vgw4")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytck4"]
atlas = ExtResource("4_6vgw4")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4a0m"]
atlas = ExtResource("4_6vgw4")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45sij"]
atlas = ExtResource("4_6vgw4")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0yvx"]
atlas = ExtResource("4_6vgw4")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfvu6"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4bna"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk36n"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohwc2"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1408, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0gt2"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1536, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ft4"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1664, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2ne5"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1792, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4820r"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1920, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xur3q"]
atlas = ExtResource("3_q1w4j")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e681"]
atlas = ExtResource("3_q1w4j")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljb73"]
atlas = ExtResource("3_q1w4j")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2m7w"]
atlas = ExtResource("3_q1w4j")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj2tf"]
atlas = ExtResource("3_q1w4j")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4apm"]
atlas = ExtResource("3_q1w4j")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m68t"]
atlas = ExtResource("3_q1w4j")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ymil"]
atlas = ExtResource("3_q1w4j")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gko2n"]
atlas = ExtResource("4_wtlej")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuqm4"]
atlas = ExtResource("4_wtlej")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvov1"]
atlas = ExtResource("4_wtlej")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efno5"]
atlas = ExtResource("4_wtlej")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6grd"]
atlas = ExtResource("4_wtlej")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uwfl"]
atlas = ExtResource("4_wtlej")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhq1i"]
atlas = ExtResource("4_wtlej")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux6sx"]
atlas = ExtResource("4_wtlej")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fiyf"]
atlas = ExtResource("4_wtlej")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0774d"]
atlas = ExtResource("4_wtlej")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf78h"]
atlas = ExtResource("4_wtlej")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnbpf"]
atlas = ExtResource("4_wtlej")
region = Rect2(384, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjh2e"]
atlas = ExtResource("4_wtlej")
region = Rect2(512, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wnet"]
atlas = ExtResource("4_wtlej")
region = Rect2(640, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8c8g"]
atlas = ExtResource("6_1ivto")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntiuv"]
atlas = ExtResource("6_1ivto")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgatu"]
atlas = ExtResource("6_1ivto")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqfoh"]
atlas = ExtResource("6_1ivto")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_prwpx"]
atlas = ExtResource("6_1ivto")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3optp"]
atlas = ExtResource("6_1ivto")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j6ny"]
atlas = ExtResource("6_1ivto")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nocmr"]
atlas = ExtResource("6_1ivto")
region = Rect2(128, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_idhmk"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_oegmo")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_0pmfx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7x3wn")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_mlumu")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4ix4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qqyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yv6h")
}],
"loop": false,
"name": &"hit_react",
"speed": 9.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_bo8xp")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_r4uyc")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_ij7oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uymky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytck4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4a0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45sij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0yvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfvu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4bna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk36n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohwc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0gt2")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_u4ft4")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_g2ne5")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_4820r")
}],
"loop": false,
"name": &"hit_react_stun",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xur3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljb73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2m7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj2tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4apm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ymil")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gko2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuqm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvov1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efno5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6grd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uwfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhq1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux6sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fiyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0774d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf78h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjh2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wnet")
}],
"loop": false,
"name": &"melee_attack_1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8c8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntiuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgatu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqfoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prwpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3optp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j6ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nocmr")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1r6al"]
atlas = ExtResource("3_kb0vp")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ihxn"]
atlas = ExtResource("3_kb0vp")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_il18b"]
atlas = ExtResource("3_kb0vp")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg1h7"]
atlas = ExtResource("4_6vgw4")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fm6k"]
atlas = ExtResource("4_6vgw4")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xhf2"]
atlas = ExtResource("4_6vgw4")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kpij"]
atlas = ExtResource("4_6vgw4")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7cyb"]
atlas = ExtResource("4_6vgw4")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuk1t"]
atlas = ExtResource("4_6vgw4")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j154i"]
atlas = ExtResource("4_6vgw4")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tsx7"]
atlas = ExtResource("4_6vgw4")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx2pr"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkyq0"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp83b"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m3jj"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1408, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0iiv"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1536, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruis0"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1664, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbn4t"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1792, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpsho"]
atlas = ExtResource("4_6vgw4")
region = Rect2(1920, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kbrsr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r6al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ihxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il18b")
}],
"loop": false,
"name": &"hit_react",
"speed": 12.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_lg1h7")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_5fm6k")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_3xhf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kpij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7cyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuk1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j154i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tsx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx2pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkyq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp83b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m3jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0iiv")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_ruis0")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_qbn4t")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_wpsho")
}],
"loop": false,
"name": &"hit_react_stun",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_203fj"]
size = Vector2(20, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kl0wj"]
size = Vector2(30, 12)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_og3g2"]
radius = 8.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hujt1"]
size = Vector2(13.8, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bukfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pecw"]

[node name="Enemy" type="CharacterBody2D" groups=["Enemy", "persistent"]]
scale = Vector2(1.25, 1.25)
collision_layer = 2
collision_mask = 15
floor_snap_length = 3.5
script = ExtResource("1_fluy6")

[node name="BodyShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -23.2)
shape = SubResource("CapsuleShape2D_s2eqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -32)
sprite_frames = SubResource("SpriteFrames_idhmk")
animation = &"melee_attack_1"
frame = 13
frame_progress = 1.0

[node name="HitReact" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-3.2, -32)
sprite_frames = SubResource("SpriteFrames_kbrsr")
animation = &"hit_react_stun"
frame = 15
frame_progress = 1.0

[node name="AttackArea" type="Area2D" parent="." groups=["enemy_sword"]]
collision_layer = 3

[node name="CollisionShape2D_Slash" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(22, -25)
shape = SubResource("RectangleShape2D_203fj")
disabled = true

[node name="CollisionShape2D_Stab" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(27, -25)
shape = SubResource("RectangleShape2D_kl0wj")
disabled = true

[node name="AreaBody" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 31

[node name="CollisionShape2D_Body" type="CollisionShape2D" parent="AreaBody"]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_og3g2")

[node name="AreaDetectPlayer" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectPlayer"]
position = Vector2(16.3, -31.2)
shape = SubResource("RectangleShape2D_hujt1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D_Down" type="RayCast2D" parent="."]
position = Vector2(22.4, -40)
target_position = Vector2(0, 60)
collision_mask = 4

[node name="RayCast2D_Forward" type="RayCast2D" parent="."]
position = Vector2(0, -22.4)
scale = Vector2(0.776, 1)
target_position = Vector2(30, 0)
collision_mask = 142

[node name="Timer_Stun" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShapeCast2D_DetectPlayerFront" type="ShapeCast2D" parent="."]
position = Vector2(17.6, -22.4)
scale = Vector2(0.974, 3)
shape = SubResource("RectangleShape2D_bukfw")
target_position = Vector2(200, 0)

[node name="ShapeCast2D_DetectPlayerBehind" type="ShapeCast2D" parent="."]
position = Vector2(-17.6, -22.4)
scale = Vector2(1, 3)
shape = SubResource("RectangleShape2D_0pecw")
target_position = Vector2(-61.6, 1.90735e-06)

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -12.0
offset_top = -55.0
offset_right = 12.0
offset_bottom = -53.0
step = 0.1
value = 100.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("8_a53vn")
texture_progress = ExtResource("9_5ex2f")

[node name="AudioStreamPlayer2D_Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_37vdk")
volume_db = 3.0
bus = &"SFX"

[node name="AudioStreamPlayer2D_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_xy00l")
bus = &"SFX"

[node name="SfxrStreamPlayer2D_Stunned" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_c4j2h")
pitch_scale = 0.9
bus = &"SFX"
script = ExtResource("13_jplx3")
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.6641
envelope/punch_time = 0.0
envelope/decay_time = 0.0
frequency/start_frequency = 0.351734
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.0
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[node name="AudioStreamPlayer2D_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_4bolf")
volume_db = 3.0
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="animation_finished" from="HitReact" to="." method="_on_hit_react_animation_finished"]
[connection signal="area_entered" from="AreaBody" to="." method="_on_area_body_area_entered"]
[connection signal="area_exited" from="AreaBody" to="." method="_on_area_body_area_exited"]
[connection signal="body_entered" from="AreaDetectPlayer" to="." method="_on_area_detect_player_body_entered"]
[connection signal="body_exited" from="AreaDetectPlayer" to="." method="_on_area_detect_player_body_exited"]
[connection signal="timeout" from="Timer_Stun" to="." method="_on_timer_stun_timeout"]
